# ip-arsenal

./: .gitignore  CLAUDE.md  IP_CONTENT_SYSTEM_GUIDE.md  README.md  RESEARCH_REPORT.md  SMART_EXTRACTION_README.md  UPGRADE_SUMMARY.md  auto_push.ps1  char_analysis.py  check_current.py  check_db.py  check_errors.py  check_html.py  check_status.py  compare.py  config.json  debug_tool.html  debug_wechat.html  demo_ip_content_system.py  diag.py  diag_out.txt  diagnose.html  do_fix.py  fix_recent.py  patch_quick_btn.py  pyproject.toml  requirements.txt  reset_errors.py  reset_out.txt  standalone_preview_test.html  start.bat  start_all.bat  start_all.ps1  start_iparsenal.bat  start_mediacrawler.bat  test.js  test_all.py  test_api.html  test_browser.html  test_browser_api.html  (+28 more)
backend/: ai.py  cache.py  check_weibo.py  check_weibo2.py  check_weibo3.py  check_weibo_out.txt  chunking.py  config.py  db.py  enhanced_extraction.py  extraction.py  extraction_pipeline.py  extractor_v2.py  fix_weibo_extract.py  ip_content_system.py  main.py  main_backup.py  main_new.py  main_new2.py  main_new_cleaned.py  main_routes_split.py  migrate_to_pg.py  prompts.py  quality_control.py  start_server.py  tasks.py  test_fetch_out.txt  test_weibo_fetch.py  wb_state2.txt  weibo_extract_raw.txt
backend/routes/: __init__.py  ip_tools.py  materials.py  media.py  misc.py  pushutree.py  sources.py  wechat.py
backend/services/: process.py
frontend/: fix_frontend.py  index.html  index.html.bak2  index.html.bak_uiux  test_script.js  update_frontend.py
wechat-format/: config.json  format.py
(+29 files in other folders)
